--- a/css/style.css
+++ b/css/style.css
@@ -24,22 +24,26 @@
 }
 
 body{
-    background-color: var(--cor01);
+    background-color: var(--cor03);
     color: white;
 }
 
 header{
     background-color: var(--cor04);
+    min-height: 150px;
     text-align: center;
-    height: 200px;
+    padding: 40px;
+
 }
 
 header h1{
+    color: #8C8F86;
     font-size: 70px;
     font-family: olds;
 }
 
 header p{
+    color: #8C8F86;
     font-family: paragrafo;
     font-size: 35px;
 }
@@ -50,7 +54,7 @@ nav{
 }
 
 nav > a{
-    color: rgb(126, 204, 255);
+    color: #8C8F86;
     padding: 10px;
     text-decoration: none;
     font-weight: bold;
@@ -59,35 +63,47 @@ nav > a{
 }
 
 nav > a:hover{
-    background-color: rgb(46, 55, 141);
-    color: var(--cor01);
+    background-color: var(--cor01);
+    color: white;
 }
 
 main{
-    background-color: white;
-    width: 1200px;
-    height: 1150px;
+    background-color: var(--cor01);
+    min-width: 300px;
+    max-width: 1200px;
+    margin-bottom: 30px;
+    padding: 20px;
     margin: auto;
     border-radius: 0px 0px 10px 10px;
 }
 
+.blosh{
+    width: 250px;
+    margin-left: 450px;
+    margin-top: 20px;
+}
+
 main h1{
-    color: #00070D;
+    color: #8C8F86;
     text-indent: 40px;
     font-size: 60px;
     font-family: olds;
 }
 
 main p{
-    color: #00070D;
+    color: var(--cor04);
+    text-align: justify;
     text-indent: 90px;
     font-size: 27px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 main img{
-    width: 90%;
-    margin-left: 60px;
+    width: 100%;
+}
+
+.pequena{
+    width: 400px;
 }
 
 .video{
@@ -96,7 +112,7 @@ main img{
 }
 
 footer{
-    background-color: #00070D;
+    background-color: var(--cor02);
     margin-top: 10px;
     height: 100%;
 }
@@ -118,3 +134,6 @@ footer a:hover{
     color: var(--cor1);
 }
 
+strong{
+    color: #8C8F86;
+}
