--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@
 body{
     background-color: var(--cor03);
     color: white;
+    width: 100%;
 }
 
 header{
@@ -33,8 +34,6 @@ header{
     min-height: 150px;
     text-align: center;
     padding: 40px;
-    width: auto;
-
 }
 
 header h1{
