--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ nav > a:hover{
 
 main{
     background-color: var(--cor01);
-    width: 800px;
+    width: 50%;
     padding: 20px;
     margin: auto;
     border-radius: 0px 0px 10px 10px;
@@ -105,7 +105,8 @@ main img{
 }
 
 .video{
-    margin-left: 170px;
+    margin-left: 170x;
+    width: 400px;
 }
 
 footer{
