--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,14 @@ main h1{
 main p{
     color: darkgray;
     text-indent: 27px;
-    font-size: 20px;
+    font-size: 23px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.ph1{
+    olor: darkgray;
+    text-indent: 27px;
+    font-size: 21.5px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
