--- a/css/style.css
+++ b/css/style.css
@@ -105,9 +105,9 @@ main p{
 }
 
 .ph1{
-    olor: darkgray;
-    text-indent: 24px;
-    font-size: 20px;
+    color: darkgray;
+    text-indent: 22px;
+    font-size: 19px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
